Minor packaging change. No functionality changes were made.

--- a/control
+++ b/control
@@ -4,7 +4,8 @@ Depends: preferenceloader
 Version: 1.1
 Architecture: iphoneos-arm
 Description: A library that provides various conveniences and enhancements for developers seeking to create preference bundles for their tweaks.
+Homepage: https://cydia.angelxwind.net/
 Depiction: https://cydia.angelxwind.net/?page/net.angelxwind.karenprefs
-Maintainer: Karen Tsai (angelXwind) <angelXwind@angelxwind.net>
-Author: Karen Tsai (angelXwind) <angelXwind@angelxwind.net>
+Maintainer: Karen／明美 (angelXwind) <angelXwind@angelxwind.net>
+Author: Karen／明美 (angelXwind) <angelXwind@angelxwind.net>
 Section: Tweaks
