--- a/control
+++ b/control
@@ -1,11 +1,11 @@
 Package: net.angelxwind.karenprefs
 Name: KarenPrefs
 Depends: preferenceloader
-Version: 1.1
+Version: 1.2
 Architecture: iphoneos-arm
-Description: A library that provides various conveniences and enhancements for developers seeking to create preference bundles for their tweaks.
+Description: A development library that provides various conveniences and enhancements for developers seeking to write preference bundles for their tweaks.
 Homepage: https://cydia.angelxwind.net/
 Depiction: https://cydia.angelxwind.net/?page/net.angelxwind.karenprefs
 Maintainer: Karen／明美 (angelXwind) <angelXwind@angelxwind.net>
 Author: Karen／明美 (angelXwind) <angelXwind@angelxwind.net>
-Section: Tweaks
+Section: Development
