--- a/control
+++ b/control
@@ -1,11 +1,11 @@
 Package: net.angelxwind.karenprefs
 Name: KarenPrefs
 Depends: preferenceloader
-Version: 1.2
+Version: 1.3
 Architecture: iphoneos-arm
 Description: A development library that provides various conveniences and enhancements for developers seeking to write preference bundles for their tweaks.
 Homepage: https://cydia.angelxwind.net/
 Depiction: https://cydia.angelxwind.net/?page/net.angelxwind.karenprefs
-Maintainer: Karen／明美 (angelXwind) <karen@angelxwind.net>
-Author: Karen／明美 (angelXwind) <karen@angelxwind.net>
+Maintainer: Karen/あけみ (angelXwind) <karen@angelxwind.net>
+Author: Karen/あけみ (angelXwind) <karen@angelxwind.net>
 Section: Development
